--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "jest": "^27.0.4"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node ./src/index.js"
   },
   "repository": {
     "type": "git",
